fix: animation 버벅임 개선을 위한 backface-visibility 속성 추가ㅣ

--- a/css/scanHand.css
+++ b/css/scanHand.css
@@ -19,7 +19,6 @@
 .hand :before {
   content: '';
   position: absolute;
-  will-change: height;
   top: 0;
   left: 0;
   width: 100%;
@@ -32,9 +31,11 @@
 @keyframes animateScan {
   0% {
     height: 0;
+    backface-visibility: hidden;
   }
   100% {
     height: 100%;
+    will-change: height;
   }
 }
 
